fix: find based on all api parameters
